--- a/NettyIMCommon/pom.xml
+++ b/NettyIMCommon/pom.xml
@@ -11,9 +11,17 @@
 
     <artifactId>NettyIMCommon</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <java.version>1.8</java.version>
     </properties>
     <build>
         <plugins>
