--- a/NettyImClient/pom.xml
+++ b/NettyImClient/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>NettyIM</artifactId>
         <groupId>wg</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,5 +22,6 @@
             <artifactId>NettyIMCommon</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 </project>
