--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <springboot.version>2.1.12.RELEASE</springboot.version>
         <netty.version>4.1.30.Final</netty.version>
-        <protobuf.version>3.19.4</protobuf.version>
+        <protobuf.version>3.21.12</protobuf.version>
         <gson.version>2.8.5</gson.version>
         <fastjson.version>1.2.29</fastjson.version>
 
@@ -62,6 +62,10 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
